# wordle-opt

./: Cargo.toml  README.md
src/: approx.rs  lib.rs  main.rs  words.txt
