[package]
name = "wordle-opt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_float = "0.1.0"
clap = { version = "3.1.2", features = ["derive"] }
fast-math = "0.1.1"
ordered-float = "2.10.0"
rayon = "1.5.1"
rustc-hash = "1.1.0"
threadpool = "1.8.1"
